@@ -29,6 +29,7 @@ Changes Since 0.5
 
 * docutils/writers/latex2e/__init__.py:
 
+  - Apply [ 1474017 ] image vertical alignment is reversed.
   - Apply [ 2051599 ] multi-page tables in latex writer (from pabigot).
   - Fix: for spanish ``~n`` is ``n`` with tilde above, change to ``~{}n``.
   - Change: has_key for dictionaries (not Nodes) to in-operator.
